Fix definition lists having an empty line on Safari/iOS

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -112,4 +112,5 @@ dd {
 dd > ul {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
